# routes/dashboard_route.go
@@ -4,12 +4,14 @@ import (
 	"github.com/Amierza/simponi-backend/handler"
 	"github.com/Amierza/simponi-backend/jwt"
 	"github.com/Amierza/simponi-backend/middleware"
+
+	"github.com/Amierza/simponi-backend/repository"
 	"github.com/gin-gonic/gin"
 )
 
-func Dashboard(route *gin.Engine, h handler.IDashboardHandler, jwtService jwt.IJWT) {
-    routes := route.Group("/api/v1/stores/:store_id").Use(middleware.Authentication(jwtService))
-    {
-        routes.GET("/dashboard", h.GetDashboard)
-    }
+func Dashboard(route *gin.Engine, dashboardHandler handler.IDashboardHandler, jwtService jwt.IJWT, rolePermissionRepo repository.IRolePermissionRepository) {
+	routes := route.Group("/api/v1/superadmin/dashboard").Use(middleware.Authentication(jwtService)).Use(middleware.OnlySuperAdmin())
+	{
+		routes.GET("/", middleware.RBAC(rolePermissionRepo, "GetDashboardData"), dashboardHandler.GetDashboardData)
+	}
 }
